# meta-threads-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: lint.yaml
src/meta_threads_bot/: example.py  example2.py  threads_api.py
src/meta_threads_bot/Context/: basic.py
src/meta_threads_bot/all_agents/: copywriting_agent.py  master_agent.py  posting_agent.py  setup_agents.py
src/meta_threads_bot/api/: __init__.py  browsing.py  login.py  post.py
