[project]
name = "meta-threads-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "mypy>=1.15.0",
    "openai-agents>=0.0.9",
    "pip>=25.0.1",
    "rich>=14.0.0",
    "selenium>=4.31.0",
    "types-requests>=2.32.0.20250328",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]
